// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for state: error 1`] = `
":host {
  display: grid;
  opacity: 0;
  max-width: inherit !important;
  box-sizing: border-box !important;
  margin: 0 !important;
  inset: inherit !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  width: auto !important;
  height: auto !important;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background: var(--p-color-error-frosted);
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl));
  box-shadow: 0px 8px 40px rgba(0,0,0,.16);
}
:host::backdrop {
  display: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
  p {
    margin-left: -8px;
  }
}

.icon {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info 1`] = `
":host {
  display: grid;
  opacity: 0;
  max-width: inherit !important;
  box-sizing: border-box !important;
  margin: 0 !important;
  inset: inherit !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  width: auto !important;
  height: auto !important;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background: var(--p-color-info-frosted);
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl));
  box-shadow: 0px 8px 40px rgba(0,0,0,.16);
}
:host::backdrop {
  display: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
  p {
    margin-left: -8px;
  }
}

.icon {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: success 1`] = `
":host {
  display: grid;
  opacity: 0;
  max-width: inherit !important;
  box-sizing: border-box !important;
  margin: 0 !important;
  inset: inherit !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  width: auto !important;
  height: auto !important;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background: var(--p-color-success-frosted);
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl));
  box-shadow: 0px 8px 40px rgba(0,0,0,.16);
}
:host::backdrop {
  display: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
  p {
    margin-left: -8px;
  }
}

.icon {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: warning 1`] = `
":host {
  display: grid;
  opacity: 0;
  max-width: inherit !important;
  box-sizing: border-box !important;
  margin: 0 !important;
  inset: inherit !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  width: auto !important;
  height: auto !important;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background: var(--p-color-warning-frosted);
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl));
  box-shadow: 0px 8px 40px rgba(0,0,0,.16);
}
:host::backdrop {
  display: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
  p {
    margin-left: -8px;
  }
}

.icon {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;
